--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,72 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.holder {
+  margin: 0;
+  margin-top: 70px;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.chat {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 50%;
+  padding: 1rem;
+  height: 60vh;
+  border: 2px solid grey;
+  background-color: #ecf0f1;
+}
+
+.image-container {
+  position: relative;
+  width: 100%;
+  height: calc(100% - 2rem); /* Adjusting for padding */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image-avatar {
+  max-width: 100%;
+  max-height: 100%;
+  width: 400px;
+  position: absolute; 
+}
+
+.image-mouth {
+  position: absolute; 
+  width: 100px;
+  top:53%;
+}
+
+.chat .send {
+  height: 50px;
+  display: flex;
+  width: 100%;
+}
+.chat .send input {
+  width: 80%;
+  padding-left: 1rem;
+  text-decoration: none;
+  border-radius: 5px 0px 0px 5px;
+  border: 2px solid grey;
+  font-size: 1rem;
+}
+.chat .send input:focus {
+  outline: none;
+}
+.chat .send button {
+  background-color: #0b0472;
+  width: 20%;
+  border-radius: 0px 5px 5px 0px;
+  border: none;
+  font-weight: 600;
+  color: white;
+  cursor: pointer;
+}
