--- a/src/index.css
+++ b/src/index.css
@@ -26,9 +26,9 @@ code {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  width: 50%;
+  width: 45%;
   padding: 1rem;
-  height: 60vh;
+  height: 65vh;
   border: 2px solid grey;
   background-color: #ecf0f1;
 }
@@ -72,7 +72,7 @@ code {
   outline: none;
 }
 .chat .send button {
-  background-color: #0b0472;
+  background-color: #0b0b0e;
   width: 20%;
   border-radius: 0px 5px 5px 0px;
   border: none;
